Happy/sad icons added and fixed an issue with styles breaking down

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -714,6 +714,11 @@ div[datepicker] {
     font-weight: 600;
 }
 
+.infobox-icon {
+	width: 10px;
+	height: 10px;
+}
+
 .infobox-subtitle {
 	color: #414141;
     font-size: 13px;
