Removed random musings and fixed tooltip which was interfering with bootstraps tooltip

--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -19,7 +19,9 @@
             ng-if="setting.type == 'setting'"
             label="(setting.name || '&nbsp;')"  
             value="setting.value" 
-            value-description="setting.valueDescription">
+            value-description="setting.valueDescription"
+            icon="(setting.icon || '')"
+            tooltip-text="(setting.tooltip || undefined)">
         </zem-infobox-setting>
     </div>
 </div>
