Changed export report button to export

--- a/client/one/partials/zem_export_plus.html
+++ b/client/one/partials/zem_export_plus.html
@@ -1,1 +1,1 @@
-<button type="button" class="btn btn-default" ng-click="showAddScheduledReport()">Export Report</button>
+<button type="button" class="btn btn-default" ng-click="showAddScheduledReport()">Export</button>
