Changed ... to columns

--- a/client/one/partials/zem_custom_table_cols.html
+++ b/client/one/partials/zem_custom_table_cols.html
@@ -1,6 +1,6 @@
 <span class="dropdown custom-cols" dropdown>
-  <a href class="btn btn-default dropdown-toggle" dropdown-toggle title="Show/hide columns">
-    ...
+  <a href class="btn btn-default" dropdown-toggle title="Show/hide columns">
+    Columns
   </a>
   <ul class="dropdown-menu dropdown-menu-right" dropdown-menu>
     <div ng-switch="hasCategories">
