Connected adgroup stats with the actual infobox ui

--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -20,6 +20,8 @@
             label="(setting.name || '&nbsp;')"  
             value="setting.value" 
             value-description="setting.valueDescription"
+            details-label="setting.detailsLabel"
+            details-content="setting.detailsContent"
             icon="(setting.icon || '')"
             tooltip-text="(setting.tooltip || undefined)">
         </zem-infobox-setting>
