Before splitting download and schedule

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2638,6 +2638,10 @@ div[datepicker] {
     }
 }
 
+.export-select {
+    width: 90px;
+}
+
 #error-box {
     color: #777;
     text-align: center;
