--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2640,6 +2640,9 @@ div[datepicker] {
 
 .export-select {
     width: 90px;
+    .select2-chosen {
+        color: #2488a1;
+    }
 }
 
 #error-box {
