--- a/client/one/partials/campaign_ad_groups.html
+++ b/client/one/partials/campaign_ad_groups.html
@@ -1,6 +1,17 @@
 <div class="page page-campaign-ad-groups">
     <div class="section" ng-class="{'chart-hidden': chartHidden}">
-        <zem-chart zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedAdGroupRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
+        <div ng-if="!hasPermission('zemauth.can_see_infobox')" class="graph-infobox-parent">
+            <zem-chart zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
+        </div>
+
+        <div ng-if="hasPermission('zemauth.can_see_infobox')" class="graph-infobox-parent">
+            <div ng-class="{'graph-container-short': infoboxVisible, 'graph-container-full': !infoboxVisible}">
+                <zem-chart ng-class="{'chart-hidden': chartHidden}" zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
+            </div>
+            <div ng-class="{'infobox-container-full': infoboxVisible, 'infobox-container-short': !infoboxVisible}">
+                <zem-infobox header="infoboxHeader" settings="infoboxSettings"></zem-infobox>
+            </div>
+        <div>
     </div>
     <div class="section table-ad-group-ads">
         <div class="button-bar">
