--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2007,7 +2007,7 @@ div[datepicker] {
     }
 }
 
-.section-conversion-pixels {
+.zem-conversion-pixels {
     margin-bottom: 20px;
 
     .title {
