Test and style fixes

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -703,7 +703,6 @@ div[datepicker] {
     padding: 8px;
 
     color: @infobox-black;
-    font-weight: 600;
 }
 
 .infobox-active-circle-icon-gray {
@@ -755,6 +754,7 @@ div[datepicker] {
     display: inline;
     vertical-align: top;
     color: #454545;
+    font-weight: normal;
 }
 
 .infobox-setting-value-comment {
