Removed grey background and made title smaller

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -3290,23 +3290,6 @@ select.media-source-select {
     width: 100%;
 }
 
-.page-campaign-agency {
-
-    form {
-        margin-bottom: 30px;
-    }
-
-    .default-settings {
-        h3 {
-            margin-top: 0;
-        }
-
-        padding: 0 15px 1px 15px;
-        background-color: #f7f7f7;
-        margin-bottom: 20px;
-    }
-}
-
-.selected-locations {
-    background-color: #fff;
+.page-campaign-agency form {
+    margin-bottom: 30px;
 }
