--- a/client/one/partials/campaign_settings.html
+++ b/client/one/partials/campaign_settings.html
@@ -29,13 +29,13 @@
             <label ng-repeat="error in errors.campaignGoal" class="control-label error" for="goal-select">{{ error }}</label>
         </div>
 
-        <div ng-if="hasPermission('zemauth.settings_defaults_on_campaign_level')" class="form-vertical default-settings">
+        <div ng-if="hasPermission('zemauth.settings_defaults_on_campaign_level')" class="form-vertical">
             <div class="form-group" ng-class="{'has-error': !!errors.targetDevices}">
-                <h3 class="col-xs-3 control-label">
+                <label class="col-xs-3 control-label">
                     <zem-internal-feature ng-if="isPermissionInternal('zemauth.settings_defaults_on_campaign_level')" popover-placement="right"></zem-internal-feature>
                     Default settings
                     <zem-help-popover content="Default targeting settings used for all newly created ad groups." placement="top"></zem-help-popover>
-                </h3>
+                </label>
             </div>
             <div class="form-group" ng-class="{'has-error': !!errors.targetDevices}">
                 <label class="col-xs-3 control-label">
